--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,24 +1,21 @@
 train_model:
-  RandomForestRegressor:
+  RandomForestClassifier:
     max_depth:
     - 5
     - 8
     max_features:
-      - 5
-      - 7
-    n_estimators:
-      - 50
-      - 100
-      - 150
-  XGBRegressor:
-    learning_rate:
-    - 0.01
-    - 0.1
-    max_depth:
     - 5
-    - 8
-    - 6
+    - 7
     n_estimators:
+    - 1
     - 100
     - 200
-base_model_score: '0.1'
+  DecisionTreeClassifier:
+    max_depth:
+    - 1
+    - 10
+    - 20
+    criterion:
+    - gini
+    - entropy
+base_model_score: '0.7857142857142857'
