--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,61 +1,119 @@
-train_model:
-  RandomForestClassifier:
-    max_depth:
-    - 5
-    - 8
-    - 15
-    max_features:
-    - 5
-    - 7
+classifiers:
+  RandomForest:
     n_estimators:
-    - 3
-    - 5
-    - 9
-  DecisionTreeClassifier:
+      type: int
+      range:
+      - 50
+      - 300
     max_depth:
-    - 1
-    - 10
-    - 20
-    criterion:
-    - gini
-    - entropy
-  XGBClassifier:
+      type: int
+      range:
+      - 2
+      - 30
+    min_samples_split:
+      type: int
+      range:
+      - 2
+      - 20
+    min_samples_leaf:
+      type: int
+      range:
+      - 1
+      - 20
+  DecisionTree:
     max_depth:
-    - 3
-    - 5
-    - 10
-    min_child_weight:
-    - 1
-    - 4
-    - 6
+      type: int
+      range:
+      - 2
+      - 30
+    min_samples_split:
+      type: int
+      range:
+      - 2
+      - 20
+    min_samples_leaf:
+      type: int
+      range:
+      - 1
+      - 20
+  LGBM:
+    n_estimators:
+      type: int
+      range:
+      - 50
+      - 300
     learning_rate:
-    - 0.01
-    - 0.1
-    - 0.2
-    subsample:
-    - 0.8
-    - 0.9
-    - 1.0
-  CatBoostClassifier:
+      type: loguniform
+      range:
+      - 1e-3
+      - 1.0
+    num_leaves:
+      type: int
+      range:
+      - 20
+      - 150
+    max_depth:
+      type: int
+      range:
+      - 2
+      - 30
+  XGBoost:
+    max_depth:
+      type: int
+      range:
+      - 1
+      - 30
+    learning_rate:
+      type: loguniform
+      range:
+      - 1e-7
+      - 10.0
+    n_estimators:
+      type: int
+      range:
+      - 1
+      - 200
+    booster:
+      type: categorical
+      choices:
+      - gbtree
+      - gblinear
+      - dart
+    lambda:
+      type: loguniform
+      range:
+      - 1e-8
+      - 1.0
+    alpha:
+      type: loguniform
+      range:
+      - 1e-8
+      - 1.0
+  CatBoost:
     depth:
-    - 3
-    - 5
-    - 7
+      type: int
+      range:
+      - 2
+      - 10
     learning_rate:
-    - 0.1
-    - 0.2
+      type: loguniform
+      range:
+      - 1e-3
+      - 1.0
     iterations:
-    - 100
-    - 200
-    - 300
+      type: int
+      range:
+      - 50
+      - 300
     l2_leaf_reg:
-    - 3
-    - 5
-    - 7
+      type: loguniform
+      range:
+      - 1e-8
+      - 10.0
 grid_search:
   class: GridSearchCV
   module: sklearn.model_selection
   params:
     cv: 3
     verbose: 3
-base_model_score: '0.9657534246575342'
+base_model_score: '0.7315272668434116'
