update model evaluation

--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,120 +1,11 @@
 classifiers:
-  RandomForest:
-    n_estimators:
-      type: int
-      range:
-      - 50
-      - 300
-    max_depth:
-      type: int
-      range:
-      - 2
-      - 30
-    min_samples_split:
-      type: int
-      range:
-      - 2
-      - 20
-    min_samples_leaf:
-      type: int
-      range:
-      - 1
-      - 20
-  DecisionTree:
-    max_depth:
-      type: int
-      range:
-      - 2
-      - 30
-    min_samples_split:
-      type: int
-      range:
-      - 2
-      - 20
-    min_samples_leaf:
-      type: int
-      range:
-      - 1
-      - 20
-  LGBM:
-    n_estimators:
-      type: int
-      range:
-      - 50
-      - 300
-    learning_rate:
-      type: loguniform
-      range:
-      - 1e-3
-      - 1.0
-    num_leaves:
-      type: int
-      range:
-      - 20
-      - 150
-    max_depth:
-      type: int
-      range:
-      - 2
-      - 30
-  XGBoost:
-    max_depth:
-      type: int
-      range:
-      - 1
-      - 30
-    learning_rate:
-      type: loguniform
-      range:
-      - 1e-7
-      - 10.0
-    n_estimators:
-      type: int
-      range:
-      - 1
-      - 200
-    booster:
-      type: categorical
-      choices:
-      - gbtree
-      - gblinear
-      - dart
-    lambda:
-      type: loguniform
-      range:
-      - 1e-8
-      - 1.0
-    alpha:
-      type: loguniform
-      range:
-      - 1e-8
-      - 1.0
-  CatBoost:
-    depth:
-      type: int
-      range:
-      - 2
-      - 10
-    learning_rate:
-      type: loguniform
-      range:
-      - 1e-3
-      - 1.0
-    iterations:
-      type: int
-      range:
-      - 50
-      - 300
-    l2_leaf_reg:
-      type: loguniform
-      range:
-      - 1e-8
-      - 10.0
-grid_search:
-  class: GridSearchCV
-  module: sklearn.model_selection
-  params:
-    cv: 3
-    verbose: 3
+  - RandomForestClassifier
+  - DecisionTreeClassifier 
+  - LGBMClassifier
+  - XGBClassifier 
+  - CatBoostClassifier 
+  - LogisticRegression 
+  - GradientBoosting 
+  - KNeighborsClassifier 
 base_model_name: DecisionTree
 base_model_score: '0.8221387911553535'
