--- a/config/model.yaml
+++ b/config/model.yaml
@@ -8,6 +8,5 @@ classifiers:
 - CatBoostClassifier
 - GradientBoostingClassifier
 - KNeighborsClassifier
-
-base_model_name: DecisionTreeClassifier
-base_model_score: '0.8412638804764789'
+base_model_name: AdaBoostClassifier
+base_model_score: '0.8312638804764789'
