--- a/params.yaml
+++ b/params.yaml
@@ -5,4 +5,4 @@ N_TRIALS: 10  # Number of trials for hyperparameter optimization
 VERBOSE: 0 # cross_validation
 N_JOBS: -1 # Number of jobs (-1 to use processors available)
 RANDOM_SEED: 42  # Seed for reproducibility
-CLASSIFIER: ["XGBClassifier"] # "ALL" = all classifiers in model.yaml or specified classifier
+CLASSIFIER: "ALL" # "ALL" = all classifiers in model.yaml or specified classifier
